updating my details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a logistics professional looking to re-skill into web development</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from Australia</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hopefully, coding will be one of them! But for now, in my skant spare time I like to play grand strategy and simulation games.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'm working toward a management position in digital transformation, but ideally I'd like to be a freelancer or consultant.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Sydney</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Because the world is increasingly digital and I want to make sure I understand it all</p>
     </section>
 
     <footer id="footer">
